# ContextOS

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  MASTER_PROMPT.md  Makefile  README.md  SYSTEM_DESIGN.md  TODO.md  docker-compose.yml  future_work.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.psm1  run.sh  test_p1.py  walkthrough.md
.github/workflows/: ci.yml
browser-extension/: README.md  background.js  content.js  generate_icons.py  manifest.json  popup.html  popup.js
cli/: __init__.py  main.py
connectors/: __init__.py  browser_history.py  gdrive.py  gmail.py  local_files.py
core/: __init__.py  config.py  config_store.py  encryption.py
core/api/: __init__.py  main.py  models.py
core/api/routers/: __init__.py  agents.py  connectors.py  graph.py  health.py  ingest.py  query.py
core/inference/: __init__.py  backends.py  engine.py  prompt_builder.py  retriever.py
core/ingestion/: __init__.py  base.py  chunker.py  extractor.py  pipeline.py
core/storage/: __init__.py  graph.py  metadata.py  vectors.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: Agents.jsx  Connectors.jsx  GraphViewer.jsx  IngestStatus.jsx  QueryBox.jsx  StatusPanel.jsx
features/: __init__.py  decision_log.py  meeting_brief.py  smart_draft.py  transcriber.py
k8s/: api-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  hpa.yaml  namespace.yaml  ollama-deployment.yaml  secret.yaml
scripts/: sample_context_demo.py  test_ingest_and_query.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_chunker.py  test_encryption.py  test_engine.py  test_extractor.py  test_graph.py  test_pipeline.py  test_retriever.py  test_vectors.py
