[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextos"
version = "0.1.0"
description = "Privacy-first on-device AI context engine for knowledge workers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "ContextOS Contributors", email = "contributors@contextos.dev" }]
keywords = ["ai", "llm", "privacy", "knowledge-graph", "rag", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ollama>=0.3.0",
    "sentence-transformers>=3.1.0",
    "chromadb>=0.5.0",
    "kuzu>=0.6.0",
    "spacy>=3.7.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.149.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/contextos"
Repository = "https://github.com/your-username/contextos"
Documentation = "https://github.com/your-username/contextos#readme"

[project.scripts]
contextos = "cli.main:app"

[tool.black]
line-length = 130
target-version = ["py311"]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]
"tests/*" = ["I001"]
"connectors/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.*:",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
